--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/DVM_Logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/svgs/DVM_Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DVM Farewell 2024</title>
   </head>
